# HSI-Core

./: .gitignore  HSI-Core.py  HSI_WEBAPP_FLOW.md  QUICKSTART.md  README.md  RUN.md  RUN_HSI_CORE.bat  RUN_HSI_CORE.command  SINGLE_CLICK_GUIDE.md  START_HSI_CORE.bat  config.py  gui_main.py  launch_gui.sh  main.py  requirements.txt  server.py  server_enhanced.py  start.sh
.codex/environments/: environment.toml
Hyperspectral{bhiya}/: .gitignore  Launch Web App.bat  README.md  pyproject.toml  requirements.txt
Hyperspectral{bhiya}/.streamlit/: config.toml
Hyperspectral{bhiya}/src/hyperspectral_viz/: __init__.py  app.py  cli.py  cube.py
Hyperspectral{bhiya}/src/hyperspectral_viz/io/: __init__.py  envi.py  numpy_cube.py  stacked_image.py
Hyperspectral{bhiya}/src/hyperspectral_viz/processing/: __init__.py  rgb.py  spectra.py
Hyperspectral{bhiya}/src/hyperspectral_viz/viz/: __init__.py  band_stack_3d.py
Hyperspectral{bhiya}/tests/: test_band_stack_3d.py  test_envi.py  test_stacked_image.py
acquisition/: analysis.py  data_cube.py  dataset.py  error_logger.py  hal.py  hardware.py  patterns.py  scan.py
logs/: error_knowledge_base.md
scan_images/HyperSpectral_analysis/: frame_00000_y0000_x0000.tiff  frame_00001_y0000_x0001.tiff  frame_00002_y0000_x0002.tiff  frame_00003_y0000_x0003.tiff  frame_00004_y0000_x0004.tiff  frame_00005_y0000_x0005.tiff  frame_00006_y0000_x0006.tiff  frame_00007_y0000_x0007.tiff  frame_00008_y0000_x0008.tiff  frame_00009_y0000_x0009.tiff  frame_00010_y0000_x0010.tiff  frame_00011_y0000_x0011.tiff  (+54 more)
static/: app.js  index.html  style.css
(+11 files in other folders)
