[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperspectral-viz"
version = "0.1.0"
description = "Interactive hyperspectral cube visualiser (ENVI / NumPy)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "streamlit>=1.32",
    "plotly>=5.18",
    "tifffile>=2023.7.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.scripts]
hyperspectral-viz = "hyperspectral_viz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
